--- a/P7-elias/backend/package.json
+++ b/P7-elias/backend/package.json
@@ -18,7 +18,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose-unique-validator": "^5.0.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "password-validator": "^5.3.0"
   },
   "repository": {
     "type": "git",
